--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   }
 }
